# filedrop

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: conversion.rs  convertion.rs  file_encoding.rs  main.rs  routes.rs  utils.rs
