[package]
name = "filedrop"
version = "0.1.0"
authors = ["Eugenio Tampieri <eugenio@eutampieri.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
base64 = "0.13"
infer = "0.2"
serde = {version = "*", features=["derive"]}
