[package]
name = "filedrop"
version = "0.1.0"
authors = ["Eugenio Tampieri <eugenio@eutampieri.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
base64 = "0.13"
infer = "0.2"
image = "0.23"
libwebp = { version = "0.1.2", features = ["1_1", "static"] }
serde = {version = "*", features=["derive"]}
lazy_static = "1.4"
blake3 = "0.3.7"
